# cardano-graphql

./: .babelrc  .dockerignore  .env  .env.docker-compose  .env.docker-compose-preprod  .eslintignore  .eslintrc.js  .eslintrc.json  .gitignore  .gitmodules  .graphqlconfig  .versionrc  .yarnrc  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Jenkinsfile  LICENSE  NOTICE  README.MD  README.md  README.rst  asset-manifest.json  bors.toml  cabal.project  cardano-prelude.cabal  codegen.external.yml  codegen.yml  default.nix  docker-compose.build.yml  docker-compose.dev.yml  docker-compose.yml  flake.nix  index.html  jest.config.js  lerna.json  lib.nix  package-lock.json  package.json  precache-manifest.0db0407a35676240fdeb94093ba6ed0b.js  (+23 more)
cardano-prelude/: ChangeLog.md  cardano-prelude.cabal
cardano-prelude-test/: cardano-prelude-test.cabal
cardano-prelude-test/src/Test/Cardano/: Prelude.hs
cardano-prelude-test/test/: test.hs
cardano-prelude/cbits/: closure_size.c  worklist.c  worklist.h
cardano-prelude/src/Cardano/: Prelude.hs
cardano-prelude/src/Cardano/Prelude/: Base.hs  Base16.hs  Formatting.hs  Orphans.hs
cardano-prelude/src/Data/FingerTree/: Strict.hs
cardano-prelude/src/Data/Semigroup/: Action.hs
cardano-prelude/src/Data/Sequence/: Strict.hs
cli/: .gitignore  (+5 more)
test/: api.js  cardano-prelude-test.cabal  dataset_references.ts  docker-compose-ci.yml  docker-compose.service-deps.yml  docker-compose.test-stack.yml  docker-compose.yml  integration.test.js  mocha.opts  sequelize-mapping.js  test.hs
test/Test/Cardano/: Prelude.hs
test/Test/Cardano/Prelude/: Base16.hs  Gen.hs  Golden.hs  Helpers.hs  Orphans.hs  Show.hs  Tripping.hs
test/loadtest/: byron-staging-config.yml
test/postgres/: Dockerfile  dump_when_block_height_reached.sh  refresh_dump.sh  restore.sh
test/postgres/init/: 001_restore.sh  002_migration.sql  002_views.sql  003_indices.info  003_views.sql  004_indices.sql  cexplorer.pg_dump
tests/: .gitignore  CONTRIBUTING.md  QUICKSTART.md  README.md  TESTING_GUIDE.md  conftest.py  generate_report.py  pyproject.toml  pytest.ini
tests/client/: __init__.py  graphql_client.py
tests/config/: networks.yaml
tests/functional/: test_golden_examples.py  test_sanity.py
tests/golden/functional/active_stake/: activeStakeForAddress.json  averageActiveStakeForAddress.json
tests/golden/functional/ada/: adaSupply.json
tests/golden/functional/assets/: assets_first3.json
tests/golden/functional/blocks/: aggregateDataWithinBlock.json  blockByNumbers_anchor.json  blocksByHashes.json  fb_blockByNumber.json  fb_cardanoTip.json  first20Blocks.json  second20Blocks.json  selectGreatGrandchildBlock.json  selectGreatGrandparentBlock.json
tests/golden/functional/cardano/: chainTipAndCurrentEpochNumber.json
tests/golden/functional/collateral_inputs/: collateralInputs.json
tests/golden/functional/collateral_outputs/: collateralOutputs.json
tests/golden/functional/coverage/: aggregates_stake_suite.json  aggregates_suite.json  certs_full.json  certs_suite.json  genesis_full.json  governance_full.json  governance_queries.json  governance_suite.json  off_chain_votes_suite.json  stake_pool_full.json  transaction_full.json
tests/golden/functional/delegation_votes/: delegationVotes.json  drepInfo.json
tests/golden/functional/delegations/: aggregateDelegation.json  delegationSample.json
tests/golden/functional/epochs/: aggregateEpochData.json  blocksInEpoch.json  epochDetailsByNumber.json  epochDetailsInRange.json  epochProtocolParams.json
tests/golden/functional/meta/: cardanoDbSyncProgress.json  genesis_keyNetworkInfo.json
tests/golden/functional/payment_addresses/: fb_paymentAddressSummary.json  paymentAddressSummary.json  paymentAddressSummary_heavy.json  paymentAddressSummary_light.json
tests/golden/functional/regression/: issue_951_nullable_tx_metadata_value.json  issue_953_nullable_token_quantity.json  issue_978_asset_registry_large_metadata.json  issue_979_backfill_missing_assets.json
tests/golden/functional/rewards/: rewardsForAddress.json
tests/golden/functional/scripts/: plutusScripts.json  scriptsAggregate.json  timelockScripts.json
tests/golden/functional/stake_pools/: allStakePoolFields.json  queryDelegators.json  stakePoolById.json  stakeRegistrationsSample.json
tests/golden/functional/token_mints/: tokenMints.json
tests/golden/functional/transactions/: fb_transactionByHash.json  fb_transactionsInBlock.json  orderedTransactionsInBlock.json  transactionByIdWithMetadataIfPresent.json  transactionsByHashesOrderByFee.json  transactionsByHashesWithCollateral.json  transactionsByHashesWithReferenceInputs.json  transactionsByHashesWithTokens.json
tests/golden/functional/utxos/: fb_utxoSetForAddresses.json  utxoAggregateValueLessThan.json  utxoSetForAddress.json
tests/golden/functional/withdrawals/: withdrawalsSample.json
tests/multi_instance/: README.md  test_compare.py
tests/negative/: README.md  test_negative.py
tests/performance/: README.md  _config.py  check_baselines.py  locustfile.py  run_load.py
tests/queries/coverage/: README.md  aggregates_scripts_suite.graphql  aggregates_stake_suite.graphql  aggregates_suite.graphql  certs_full.graphql  certs_suite.graphql  genesis_full.graphql  governance_full.graphql  governance_queries.graphql  governance_suite.graphql  off_chain_votes_suite.graphql  stake_pool_full.graphql  transaction_full.graphql
tests/queries/example/active_stake/: activeStakeForAddress.graphql
tests/queries/fireblocks/: blockByNumber.graphql  cardanoTip.graphql  paymentAddressSummary.graphql  transactionByHash.graphql  transactionsInBlock.graphql  utxoSetForAddresses.graphql
tests/queries/regression/: README.md  fetch_issues.py  issue_951_nullable_tx_metadata_value.graphql  issue_953_nullable_token_quantity.graphql  issue_978_asset_registry_large_metadata.graphql  issue_979_backfill_missing_assets.graphql
tests/schema/: README.md  snapshot.json  test_schema_diff_logic.py  test_schema_snapshot.py
tests/utils/: coverage.py  diff.py  golden_io.py  markers.py  normalize.py  query_loader.py  schema_snapshot.py
(+1025 files in other folders)
