name:                cardano-prelude
version:             0.1.0.0
synopsis:            A Prelude replacement for the Cardano project
description:         A Prelude replacement for the Cardano project
license:             MIT
license-file:        LICENSE
author:              IOHK
maintainer:          operations@iohk.io
copyright:           2018 IOHK
category:            Currency
build-type:          Simple
extra-source-files:  ChangeLog.md, README.md
cabal-version:       >=1.10

flag development
    description: Disable `-Werror`
    default: False
    manual: True

library
  hs-source-dirs:      src

  exposed-modules:
                       Cardano.Prelude

  other-modules:
                       Cardano.Prelude.Base
                       Cardano.Prelude.Base16
                       Cardano.Prelude.Error
                       Cardano.Prelude.Formatting
                       Cardano.Prelude.GHC.Heap
                       Cardano.Prelude.GHC.Heap.NormalForm
                       Cardano.Prelude.GHC.Heap.NormalForm.Classy
                       Cardano.Prelude.GHC.Heap.Size
                       Cardano.Prelude.GHC.Heap.Tree
                       Cardano.Prelude.HeapWords
                       Cardano.Prelude.Json.Canonical
                       Cardano.Prelude.Json.Parse
                       Cardano.Prelude.Orphans
                       Cardano.Prelude.Strict

  build-depends:       base
                     , aeson
                     , array
                     , base16-bytestring
                     , bytestring
                     , canonical-json
                     , cborg
                     , containers
                     , formatting
                     , ghc-heap
                     , ghc-prim
                     , hashable
                     , integer-gmp
                     , mtl
                     , nonempty-containers
                     , protolude                  < 0.2.4
                     , tagged
                     , text
                     , time
                     , vector

  default-language:    Haskell2010
  default-extensions:  NoImplicitPrelude

  c-sources:           cbits/hashset.c
                       cbits/worklist.c
                       cbits/closure_size.c

  ghc-options:         -Weverything
                       -fno-warn-missing-import-lists
                       -fno-warn-unsafe
                       -fno-warn-safe
  cc-options:          -Wall

  if (!flag(development))
    ghc-options:         -Werror

test-suite cardano-prelude-test
  hs-source-dirs:      test
  main-is:             test.hs
  type:                exitcode-stdio-1.0

  exposed-modules:
                       Test.Cardano.Prelude

  other-modules:
                       Test.Cardano.Prelude
                       Test.Cardano.Prelude.Base16
                       Test.Cardano.Prelude.Gen
                       Test.Cardano.Prelude.GHC.Heap.NormalForm
                       Test.Cardano.Prelude.GHC.Heap.NormalForm.Classy
                       Test.Cardano.Prelude.GHC.Heap.Size
                       Test.Cardano.Prelude.GHC.Heap.Tree
                       Test.Cardano.Prelude.Golden
                       Test.Cardano.Prelude.Helpers
                       Test.Cardano.Prelude.Orphans
                       Test.Cardano.Prelude.QuickCheck.Arbitrary
                       Test.Cardano.Prelude.QuickCheck.Property
                       Test.Cardano.Prelude.Tripping

  build-depends:       base
                     , aeson
                     , aeson-pretty >= 0.8.5
                     , attoparsec
                     , base16-bytestring
                     , bytestring
                     , canonical-json
                     , cardano-prelude
                     , containers
                     , cryptonite
                     , formatting
                     , ghc-heap
                     , ghc-prim
                     , hedgehog
                     , hspec
                     , pretty-show
                     , QuickCheck
                     , quickcheck-instances
                     , random
                     , text
                     , template-haskell
                     , time

  default-language:    Haskell2010
  default-extensions:  NoImplicitPrelude

  ghc-options:         -Weverything
                       -fno-warn-missing-import-lists
                       -fno-warn-unsafe
                       -fno-warn-safe

  if (!flag(development))
    ghc-options:         -Werror
