cabal-version: 2.2

name:                cardano-prelude-test
version:             0.1.0.0
synopsis:            Utility types and functions for testing Cardano
description:         Utility types and functions for testing Cardano
license:             MIT
license-file:        LICENSE
author:              IOHK
maintainer:          operations@iohk.io
copyright:           2018 IOHK
category:            Currency
build-type:          Simple

flag development
  description: Disable `-Werror`
  default: False
  manual: True

library
  hs-source-dirs:      src
  exposed-modules:     Test.Cardano.Prelude
  other-modules:       Test.Cardano.Prelude.Base16
                       Test.Cardano.Prelude.Gen
                       Test.Cardano.Prelude.Golden
                       Test.Cardano.Prelude.Helpers
                       Test.Cardano.Prelude.Orphans
                       Test.Cardano.Prelude.QuickCheck.Arbitrary
                       Test.Cardano.Prelude.QuickCheck.Property
                       Test.Cardano.Prelude.Tripping
  build-depends:       base
                     , aeson
                     , aeson-pretty >= 0.8.5
                     , attoparsec
                     , base16-bytestring
                     , bytestring
                     , canonical-json
                     , cardano-prelude
                     , containers
                     , cryptonite
                     , formatting
                     , hedgehog
                     , hspec
                     , pretty-show
                     , QuickCheck
                     , quickcheck-instances
                     , template-haskell
                     , text
                     , time
  default-language:    Haskell2010
  default-extensions:  NoImplicitPrelude
  ghc-options:         -Weverything
                       -fno-warn-missing-import-lists
                       -fno-warn-safe
                       -fno-warn-unsafe
  if impl(ghc >=8.8)
    ghc-options:       -fno-warn-missing-deriving-strategies
  if impl(ghc >=8.10)
    ghc-options:       -fno-warn-missing-safe-haskell-mode
                       -fno-warn-prepositive-qualified-module

  if (!flag(development))
    ghc-options:         -Werror

test-suite cardano-prelude-test-suite
  hs-source-dirs:      test
  main-is:             test.hs
  type:                exitcode-stdio-1.0
  other-modules:       Test.Cardano.Prelude.Base16Spec
                       Test.Cardano.Prelude.GHC.Heap.NormalFormSpec
                       Test.Cardano.Prelude.GHC.Heap.SizeSpec
                       Test.Cardano.Prelude.GHC.Heap.TreeSpec

  build-depends:       base
                     , base16-bytestring
                     , bytestring
                     , cardano-prelude
                     , cardano-prelude-test
                     , ghc-heap
                     , ghc-prim
                     , hedgehog
                     , text
  default-language:    Haskell2010
  default-extensions:  NoImplicitPrelude
  ghc-options:         -Weverything
                       -fno-warn-missing-import-lists
                       -fno-warn-unsafe
                       -fno-warn-safe
                       -threaded
                       -rtsopts
  if impl(ghc >=8.8)
    ghc-options:       -fno-warn-missing-deriving-strategies
  if impl(ghc >=8.10)
    ghc-options:       -fno-warn-missing-safe-haskell-mode
                       -fno-warn-prepositive-qualified-module

  if (!flag(development))
    ghc-options:       -Werror
