cabal-version: 2.2

name:                cardano-prelude
version:             0.1.0.0
synopsis:            A Prelude replacement for the Cardano project
description:         A Prelude replacement for the Cardano project
license:             MIT
license-file:        LICENSE
author:              IOHK
maintainer:          operations@iohk.io
copyright:           2018-2020 IOHK
category:            Currency
build-type:          Simple
extra-source-files:  ChangeLog.md, README.md cbits/hashset.h cbits/worklist.h

flag development
  description: Disable `-Werror`
  default: False
  manual: True

library
  hs-source-dirs:      src
  exposed-modules:     Cardano.Prelude
                       Cardano.Prelude.Base16.Internal
                       Data.FingerTree.Strict
                       Data.Sequence.Strict
                       Data.Semigroup.Action
  other-modules:       Cardano.Prelude.Base
                       Cardano.Prelude.Base16
                       Cardano.Prelude.Error
                       Cardano.Prelude.Formatting
                       Cardano.Prelude.GHC.Heap
                       Cardano.Prelude.GHC.Heap.NormalForm
                       Cardano.Prelude.GHC.Heap.Size
                       Cardano.Prelude.GHC.Heap.Tree
                       Cardano.Prelude.HeapWords
                       Cardano.Prelude.Json.Canonical
                       Cardano.Prelude.Json.Parse
                       Cardano.Prelude.Orphans
                       Cardano.Prelude.Strict

  build-depends:       base
                     , aeson
                     , array
                     , base16-bytestring      < 1
                     , bytestring
                     , canonical-json
                     , cborg
                     , containers
                     , fingertree
                     , formatting
                     , ghc-heap
                     , ghc-prim
                     , integer-gmp
                     , mtl
                     , nothunks
                     , protolude
                     , serialise
                     , tagged
                     , text
                     , time
                     , vector
  default-language:    Haskell2010
  default-extensions:  NoImplicitPrelude
  c-sources:           cbits/hashset.c
                       cbits/worklist.c
                       cbits/closure_size.c
  ghc-options:         -Weverything
                       -fno-warn-missing-import-lists
                       -fno-warn-unsafe
                       -fno-warn-safe
  if impl(ghc >=8.8)
    ghc-options:       -fno-warn-missing-deriving-strategies
  if impl(ghc >=8.10)
    ghc-options:       -fno-warn-missing-safe-haskell-mode
                       -fno-warn-prepositive-qualified-module

  cc-options:          -Wall

  if (!flag(development))
    ghc-options:       -Werror
