name:                cardano-prelude-test
version:             0.1.0.0
synopsis:            Utility types and functions for testing Cardano
description:         Utility types and functions for testing Cardano
license:             MIT
license-file:        LICENSE
author:              IOHK
maintainer:          operations@iohk.io
copyright:           2018 IOHK
category:            Currency
build-type:          Simple
cabal-version:       >=1.10

flag development
    description: Disable `-Werror`
    default: False
    manual: True

library
  exposed-modules:
                       Test.Cardano.Prelude

  other-modules:
                       Test.Cardano.Prelude.Base16
                       Test.Cardano.Prelude.Gen
                       Test.Cardano.Prelude.Golden
                       Test.Cardano.Prelude.Orphans
                       Test.Cardano.Prelude.QuickCheck.Arbitrary
                       Test.Cardano.Prelude.QuickCheck.Property
                       Test.Cardano.Prelude.Tripping

  build-depends:       base
                     , aeson
                     , attoparsec
                     , base16-bytestring
                     , bytestring
                     , cardano-prelude
                     , cryptonite
                     , formatting
                     , hedgehog
                     , hspec
                     , pretty-show
                     , QuickCheck
                     , quickcheck-instances
                     , text
                     , time

  default-language:    Haskell2010
  default-extensions:  NoImplicitPrelude

  ghc-options:         -Weverything
                       -fno-warn-missing-import-lists
                       -fno-warn-safe
                       -fno-warn-unsafe

  if (!flag(development))
    ghc-options:         -Werror
