[project]
name = "cardano-graphql-tests"
version = "0.2.0"
description = "Python test framework for cardano-graphql (Phase 1: sanity+golden+negative; Phase 2: load/perf)"
requires-python = ">=3.12"
dependencies = [
    "pytest>=8.4.0",
    "allure-pytest>=2.15.0",
    "httpx>=0.28.0",
    "jsonschema>=4.25.0",
    "pytest-xdist>=3.8.0",
    "pytest-env>=1.2.0",
    "pyyaml>=6.0.2",
    "python-dotenv>=1.1.0",
    "locust>=2.40.0",
    "graphql-core>=3.2.0",
    "pytest-html>=4.1.0",
]

[tool.uv]
package = false
